<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
            android:layout_width="410dp"
            android:layout_height="302dp" app:srcCompat="@drawable/itcroud" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.009"
    />
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="95dp" app:srcCompat="@mipmap/ic_star_foreground" android:id="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginTop="224dp"/>
    <TextView
            android:text="@string/temporadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4" tools:layout_editor_absoluteY="340dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.055"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/infoTemporadas"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3" tools:layout_editor_absoluteY="332dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/infoEdicion"
            android:ems="10"
            android:id="@+id/editTextTextPersonName4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.555"/>
    <TextView
            android:text="@string/edicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="56dp"/>
    <TextView
            android:text="@string/descripcion"
            android:layout_width="348dp"
            android:layout_height="52dp" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="80dp" android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
    <Button
            android:text="@string/primerBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="@+id/button2" app:layout_constraintHorizontal_bias="0.71"/>
    <Button
            android:text="@string/segundoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2" tools:layout_editor_absoluteY="616dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>